cmake_minimum_required(VERSION 3.20)
project(MyProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(work1 Work_1.cpp)
add_executable(work2 Work_2.cpp)
add_executable(work3 Work_3.cpp)
add_executable(work4 Work_4.cpp)
add_executable(work5 Work_5.cpp)
add_executable(work6 Work_6.cpp)
add_executable(work7 Work_7.cpp)
add_executable(work8 Work_8.cpp)
add_executable(work9 Work_9.cpp)
add_executable(work10 Work_10.cpp)
add_executable(work11 Work_11.cpp)
add_executable(work12 Work_12.cpp)
add_executable(work13 Work_13.cpp)